# deptox

./: .gitignore  .madgerc  .release-it.json  .secretlintrc.json  .syncpackrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  RELEASE.md  SECURITY.md  VERSION_MANAGEMENT.md  codecov.yml  commitlint.config.js  eslint.config.js  knip.json  package.json  pnpm-lock.yaml  sync-version.cjs  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  pipeline.yml  release.yml  version-bump.yml
locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  it.json  ja.json  ko.json  pt.json  ru.json  zh.json
src/: App.css  App.tsx  i18n.test.ts  i18n.ts  test-helpers.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  entitlements.plist  tarpaulin.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  test_helpers.rs  test_helpers.test.rs
src-tauri/src/commands/: autostart.rs  delete.rs  delete.test.rs  filesystem.rs  filesystem.test.rs  largest_files.rs  largest_files.test.rs  license.rs  locale.rs  mod.rs  scan.rs  scan.test.rs  settings.rs  settings.test.rs
src-tauri/src/scanner/: background.rs  background.test.rs  core.rs  core.test.rs  mod.rs  size_pool.rs  size_pool.test.rs  types.rs  types.test.rs
src-tauri/src/tray/: mod.rs  mod.test.rs
src/components/: AboutPage.tsx  AnimatedListItem.tsx  AnimatedStorageSize.tsx  Button.tsx  Icon.tsx  (+25 more)
(+62 files in other folders)
