[package]
name = "deptox"
version = "0.1.13"
description = "A macOS menubar app to manage and clean up dependency directories"
authors = ["Alex Whinfield"]
license = "MIT"
repository = "https://github.com/alexwhin/deptox"
edition = "2021"

[lib]
name = "deptox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jwalk = "0.8"
crossbeam-channel = "0.5"
num_cpus = "1.16"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
thiserror = "2"
dirs = "6"
trash = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3.14"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
